# misetui

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-projects-tab/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md
.planning/phases/02-drift-indicator/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  drift-detection-research.md
.planning/phases/03-bootstrap-wizard/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md
.planning/phases/04-inline-editor/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md
src/: action.rs  app.rs  config.rs  event.rs  main.rs  mise.rs  model.rs  theme.rs  tui.rs
src/ui/: config.rs  doctor.rs  editor.rs  environment.rs  footer.rs  header.rs  highlight.rs  layout.rs  mod.rs  outdated.rs  popup.rs  projects.rs  registry.rs  settings.rs  sidebar.rs  tasks.rs  tools.rs  wizard.rs
