[package]
name = "misetui"
version = "0.1.0"
edition = "2021"
description = "A terminal user interface for mise"
license = "MIT"
repository = "https://github.com/IhsenBouallegue/misetui"
homepage = "https://github.com/IhsenBouallegue/misetui"
keywords = ["mise", "tui", "cli", "devtools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
color-eyre = "0.6"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
unicode-width = "0.2"
fuzzy-matcher = "0.3"
notify = "6"
dirs = "5"
toml = "0.8"
toml_edit = "0.22"
